src/tests/expand_fn/pass/stress-1mil.tj
fn rec<n>() = (a)
    if n > 0 then
        a = 0
        b = rec<n-1>()
        c = rec<n-1>()
    else 
        a = 1
    end if

module mod() = ()
    automaton
        node n 
            b = rec<20>()
        transition