src/tests/expand_fn/fail/wrong_number_static_args.tj

fn rec<n>() = (a)
    if n > 0 then
        a = 0
        b = rec<n-1>()
        c = rec<n-1>()
    else 
        a = 1
    end if

module main() = ()
    automaton
        node n 
            b = rec()
        transition